# glint

./: .gitignore  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  deploy.yml
circuits/: .gitignore
circuits/patronage/: Nargo.toml
circuits/patronage/src/: main.nr
contracts/patronage/: .gitignore  Cargo.toml  README.md
contracts/patronage/contracts/patronage/: Cargo.toml
contracts/patronage/contracts/patronage/src/: lib.rs  test.rs
contracts/tipjar/: README.md
scripts/: patronage-e2e.ts  poseidon-check.ts  show-server-address.ts  test-x402.ts  verify-proof.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/[slug]/: page.tsx
src/app/browse/: page.tsx
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/app/test/: page.tsx
src/app/wallet/: page.tsx
src/components/creator/: ActivityWall.tsx  BrowseCreators.tsx  CreateProfileForm.tsx  OwnerPollButton.tsx  PatronagePolls.tsx  PrivatePatronage.tsx  ProfileTabs.tsx  ShareButton.tsx  SocialLinks.tsx  TipForm.tsx  TipWall.tsx
src/components/layout/: HeaderNav.tsx  PageShell.tsx  SiteHeader.tsx
src/components/ui/: Button.tsx  Card.tsx  EmptyState.tsx  InitialAvatar.tsx  Modal.tsx  Skeleton.tsx  Spinner.tsx
src/hooks/: use-stellar-wallet.ts
src/lib/: api-helpers.ts  form-status.ts  format-time.ts  hd-wallet.ts  next-http-adapter.ts  polls.ts  rate-limit.ts  soroban-tx.ts  stellar-sdk.ts  stellar-wallet.ts  stellar.ts  tip-events.ts  tip-limits.ts  tipjar.ts  x402-server.ts
src/stores/: wallet.ts
(+52 files in other folders)
