[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
# soroban-sdk 26 matches the on-chain BN254 host functions (Protocol 25/26) that
# the UltraHonk verifier relies on. Do not downgrade to 25.
soroban-sdk = "26"
soroban-poseidon = "26.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
